--- a/src/app/participantes/pages/form-participantes/form-participantes.component.scss
+++ b/src/app/participantes/pages/form-participantes/form-participantes.component.scss
@@ -6,6 +6,7 @@ input[type=text], [type=number] {
   outline: none;
   &:focus {
     border: solid 2px $primary-color;
+    box-shadow: none;
   }
 }
 
