--- a/src/app/participantes/pages/list-participantes/list-participantes.component.html
+++ b/src/app/participantes/pages/list-participantes/list-participantes.component.html
@@ -24,13 +24,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let participante of participantes">
+        <tr *ngFor="let participante of participantes; let ind = index">
           <th>{{ participante.id }}</th>
           <td>{{ participante.nome }}</td>
           <td>{{ participante.cpf }}</td>
-          <td>{{ participante.colaboracao }}</td>
-          <td><a class="text-dark" [routerLink]="['editar', participante.id]"><i class="far fa-edit" style="cursor: pointer;" ></i></a></td>
-          <td><i class="far fa-trash-alt" style="cursor: pointer;"></i></td>
+          <td ><span *ngFor="let comida of participante.food; let i = index"> {{ participante.food[i].food }},</span></td>
+          <td><a class="text-dark" (click)="abrirEdit()" [routerLink]="['editar', participante.id]"><i class="far fa-edit" style="cursor: pointer;" ></i></a></td>
+          <td><a (click)="excluir(participante.id)"><i  class="far fa-trash-alt" style="cursor: pointer;"></i></a></td>
         </tr>
       </tbody>
     </table>
